@@ -1,0 +1,21 @@
+program	num_tracks	island_base	island_lst	mem_per_obs	cpu_per_obs
+gmtkEMtrainNew	1	0	0	1486	1.42857142857e-05
+gmtkEMtrainNew	2	0	0	1439	2e-05
+gmtkEMtrainNew	3	0	0	1295	2.5e-05
+gmtkEMtrainNew	4	0	0	1539	2.5e-05
+gmtkEMtrainNew	5	0	0	1760	3.33333333333e-05
+gmtkEMtrainNew	6	0	0	2078	3.33333333333e-05
+gmtkEMtrainNew	7	0	0	2245	5e-05
+gmtkEMtrainNew	8	0	0	2289	5e-05
+gmtkEMtrainNew	9	0	0	2571	5e-05
+gmtkEMtrainNew	10	0	0	2637	5.71428571429e-05
+gmtkEMtrainNew	11	0	0	2895	6.66666666667e-05
+gmtkEMtrainNew	12	0	0	3058	6.66666666667e-05
+gmtkEMtrainNew	13	0	0	3166	6.66666666667e-05
+gmtkEMtrainNew	14	0	0	3381	6.66666666667e-05
+gmtkEMtrainNew	15	0	0	3542	8e-05
+gmtkEMtrainNew	16	0	0	3707	8e-05
+gmtkEMtrainNew	17	0	0	3871	8e-05
+gmtkEMtrainNew	18	0	0	4044	9e-05
+gmtkEMtrainNew	19	0	0	4220	0.0001
+gmtkEMtrainNew	20	0	0	4401	0.0001
